test: add opens from java.base/java.lang