@@ -194,7 +194,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire.version}</version>
                 <configuration>
-                    <argLine>-Djava.system.class.loader=org.icij.datashare.DynamicClassLoader -ea</argLine>
+                    <argLine>-Djava.system.class.loader=org.icij.datashare.DynamicClassLoader -ea --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
